feat (console): implement main view with internationalization support
- Created ConsoleView with menu navigation logic.
- Integrated JSON-based LanguageManager for English and French.

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\Log\Log.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+	<None Update="Resources\Languages\lang.en.json">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
+	<None Update="Resources\Languages\lang.fr.json">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
+</ItemGroup>
+
 </Project>
