--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Management" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Log\Log.csproj" />
   </ItemGroup>
 
