--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -22,4 +22,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Application\Resources\Languages\lang.*.json"
+          Link="Resources\Languages\%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
