feat(gui): add a Lottie chat widget with contextual messages

--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Lottie" Version="11.3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,8 +25,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\Application\Resources\Languages\lang.*.json"
-          Link="Resources\Languages\%(Filename)%(Extension)">
+    <AvaloniaResource Include="Assets\Animations\**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Application\Resources\Languages\lang.*.json" Link="Resources\Languages\%(Filename)%(Extension)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
