fix: add logo and remove test button

--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AvaloniaResource Include="Assets\Animations\**\*" />
+    <AvaloniaResource Include="Assets\**\*" />
   </ItemGroup>
 
   <ItemGroup>
