--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -15,7 +15,7 @@
   <!-- Copy CryptoSoft.exe to Resources folder after build -->
   <Target Name="CopyCryptoSoft" AfterTargets="Build">
     <ItemGroup>
-      <CryptoSoftFiles Include="..\CryptoSoft\publish\CryptoSoft.exe" />
+      <CryptoSoftFiles Include="..\CryptoSoft\bin\$(Configuration)\net10.0\CryptoSoft.exe" />
     </ItemGroup>
     <MakeDir Directories="$(OutputPath)Resources" />
     <Copy SourceFiles="@(CryptoSoftFiles)" DestinationFolder="$(OutputPath)Resources" SkipUnchangedFiles="true" />
