--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -33,4 +33,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+	<Target Name="CopyCryptoSoft" AfterTargets="Build">
+		<ItemGroup>
+			<CryptoSoftFiles Include="..\CryptoSoft\publish\CryptoSoft.exe" />
+		</ItemGroup>
+		<MakeDir Directories="$(OutputPath)Resources" />
+		<Copy SourceFiles="@(CryptoSoftFiles)" DestinationFolder="$(OutputPath)Resources" SkipUnchangedFiles="true" />
+
+	</Target>
 </Project>
+
+
