--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -6,20 +6,11 @@
     <AssemblyName>EasySave</AssemblyName>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <CopyCryptoSoftToResources>true</CopyCryptoSoftToResources>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
-
-  <!-- Copy CryptoSoft.exe to Resources folder after build -->
-  <Target Name="CopyCryptoSoft" AfterTargets="Build">
-    <ItemGroup>
-      <CryptoSoftFiles Include="..\CryptoSoft\bin\$(Configuration)\net10.0\CryptoSoft.exe" />
-    </ItemGroup>
-    <MakeDir Directories="$(OutputPath)Resources" />
-    <Copy SourceFiles="@(CryptoSoftFiles)" DestinationFolder="$(OutputPath)Resources" SkipUnchangedFiles="true" />
-    <Message Text="? CryptoSoft.exe (single-file) copied to $(OutputPath)Resources" Importance="high" />
-  </Target>
 
 </Project>
