chore(build,docs): remove CryptoSoft auto-build and reorganize user guides - remove automatic CryptoSoft build/copy targets (Directory.Build.targets) - remove CopyCryptoSoftToResources from Console and GUI project files - reorganize guides under docs/user-guide/fr and docs/user-guide/en - add French and English GUI user guide and user-guide index

--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -2,10 +2,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
+    <AssemblyName>EasySave</AssemblyName>
     <Nullable>enable</Nullable>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>Assets\Brand\easysave-logo.ico</ApplicationIcon>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-    <CopyCryptoSoftToResources>true</CopyCryptoSoftToResources>
   </PropertyGroup>
 
   <ItemGroup>
