refacto: Refactoring of the ViewModels files placing them in new project Presentation to respect Clean Architecture, and modify dependencies to respect the new infrastructure

--- a/src/CryptoSoft/CryptoSoft.csproj
+++ b/src/CryptoSoft/CryptoSoft.csproj
@@ -13,4 +13,10 @@
 	<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="publish\CryptoSoft.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
