--- a/src/Console/Console.csproj
+++ b/src/Console/Console.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\Application\Resources\Languages\lang.*.json" Link="Resources\Languages\%(Filename)%(Extension)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
