--- a/src/GUI/GUI.csproj
+++ b/src/GUI/GUI.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Presentation\Presentation.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
